# xash3d

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Android.mk  CMakeLists.txt  CONTRIBUTING.md  PVS-Studio.cfg  README  README.emscripten  README.emscripten.md  README.md  appveyor.yml  backup.bat  backup.lst  debug.bat  dedicated_initscript.sh  make_sdk.bat  release.bat  s  travis-deploy.sh  travis-upload.sh  xash.dsw  xash.sln  xash3d.sh  xash_sdk.dsw  xash_sdk.lst  xashds@.service
cl_dll/: GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer_Sample.cpp  GameStudioModelRenderer_Sample.h  StudioModelRenderer.cpp  StudioModelRenderer.h  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  camera.h  cdll_int.cpp  cl_dll.dsp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  demo.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  eventscripts.h  flashlight.cpp  geiger.cpp  health.cpp  health.h  hud.cpp  hud.h  hud_iface.h  hud_msg.cpp  hud_redraw.cpp  hud_servers.cpp  hud_servers.h  hud_servers_priv.h  (+50 more)
cmake/: CheckSSEFeatures.cmake  FWGSLib.cmake  FindSDL2.cmake  FindVGUI.cmake  PVSAnalyze.cmake  VSForceXPToolchain.cmake
common/: Sequence.h  backends.h  beamdef.h  bspfile.h  cl_entity.h  com_model.h  con_nprint.h  const.h  cvardef.h  defaults.h  demo_api.h  dlight.h  engine_features.h  entity_state.h  entity_types.h  event_api.h  event_args.h  event_flags.h  features.h  gameinfo.h  hltv.h  lightstyle.h  (+20 more)
engine/: APIProxy.h  Android.mk  CMakeLists.save  CMakeLists.txt  Makefile.cctools.mk  Makefile.dep  Makefile.emscripten  Makefile.linux  Makefile.mingw  SDL_android_main.c  Sequence.h  android.c  android.cpp  cdll_exp.h  cdll_int.h  custom.h  customentity.h  edict.h  eiface.h  engine.dsp  engine.vcxproj  engine.vcxproj.filters  fs_int.h  keydefs.h  menu_int.h  mobility_int.h  physint.h  progdefs.h  shake.h  sprite.h  studio.h  warpsin.h
engine/client/: anorm_dots.h  cl_cmds.c  cl_demo.c  cl_events.c  cl_frame.c  cl_game.c  cl_main.c  cl_menu.c  cl_mobile.c  cl_module.c  cl_netgraph.c  cl_parse.c  cl_pmove.c  cl_remap.c  cl_scrn.c  cl_tent.c  cl_tent.h  cl_video.c  cl_view.c  client.h  console.c  gamma.c  gl_backend.c  gl_beams.c  gl_cull.c  gl_decals.c  gl_draw.c  gl_dynamic.h  gl_emulate.c  gl_export.h  gl_fbo.c  gl_image.c  gl_local.h  gl_mirror.c  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmath.c  gl_rmisc.c  gl_rpart.c  (+36 more)
engine/client/strobe/: r_strobe_api.c  r_strobe_api.h  r_strobe_api_protected_.h  r_strobe_base_protected_.h  r_strobe_core.c  r_strobe_core.h  r_strobe_template.c.TEMPLATE  r_strobe_template.h.TEMPLATE
engine/client/vgui/: utlmemory.h  utlrbtree.h  utlvector.h  vgui_api.h  vgui_clip.cpp  vgui_draw.c  vgui_draw.h  vgui_font.cpp  vgui_input.cpp  vgui_int.cpp  vgui_main.h  vgui_surf.cpp
engine/common/: Sequence.c  aviffmpeg.c  avikit.c  base_cmd.c  base_cmd.h  build.c  cfgscript.c  cmd.c  common.c  common.h  con_utils.c  console.c  crashhandler.c  crclib.c  crtlib.c  crtlib.h  crtlib_inline.h  cvar.c  dedicated.c  filesystem.c  filesystem.h  gamma.c  host.c  hpak.c  identification.c  infostring.c  input.c  input.h  joyinput.c  joyinput.h  keys.c  launcher.c  library.c  library.h  masterlist.c  mathlib.c  mathlib.h  matrixlib.c  mod_local.h  mod_studio.c  (+26 more)
engine/common/imagelib/: imagelib.h  img_bmp.c  img_dds.c  img_main.c  img_quant.c  img_tga.c  img_utils.c  img_wad.c
engine/common/sdl/: events.c  events.h  touchscreen.c  touchscreen.h
engine/common/soundlib/: mpeg.lib  snd_main.c  snd_mp3.c  snd_utils.c  snd_wav.c  soundlib.h
engine/common/soundlib/libmpg/: CMakeLists.txt  common.c  dct64_i386.c  decode_i386.c  format.c  frame.c  frame.h  huffman.h  index.c  index.h  interface.c  l2tables.h  layer2.c  layer3.c  libmpg.h  mpg123.c  mpg123.h  mpglib.h  parse.c  reader.c  reader.h  tabinit.c  wavehdr.h
engine/common/stb/: stb_sprintf.h
engine/platform/android/: android-gameif.cpp  android-gameif.h  android-main.h  android-touchif.cpp  android.c  android_nosdl.c  dlsym-weak.h  gl_mangle.h  linker.h  snd_opensles.c  vid_android.c
engine/platform/emscripten/: mods.js.example  shell.html  unaligned.txt
engine/platform/sdl/: events.c  events.h  gl_sdl.c  gl_sdl_static.c  snd_sdl.c  vid_sdl.c  vid_sdl_nanogl.c
engine/platform/win32/: con_win.c
engine/server/: server.h  sv_client.c  sv_cmds.c  sv_custom.c  sv_filter.c  sv_frame.c  sv_game.c  sv_init.c  sv_log.c  sv_main.c  sv_move.c  sv_phys.c  sv_pmove.c  sv_query.c  sv_save.c  sv_utils.c  sv_world.c
game_launch/: CMakeLists.txt  game.aps  game.cpp  game.dsp  game.dsw  game.rc  game_launch.vcxproj  game_launch.vcxproj.filters  xash.c
loader/: 1.py  CMakeLists.txt  Makefile.dep  Makefile.dep.bak  Makefile.linux  com.h  config.h  ext.c  gldef.in  glfuncs.inc  glvars.h  glvars.inc  ldt_keeper.c  loader.c  mmap_anon.c  module.c  pe_image.c  registry.c  win32.c
loader/wine/: module.h  pe_image.h  windef.h  winestring.h
mainui/: Android.mk  CMakeLists.txt  Makefile.linux  basemenu.cpp  basemenu.h  enginecallback.h  extdll.h  mainui.def  mainui.dsp  mainui.vcxproj  menu_advcontrols.cpp  menu_audio.cpp  menu_btns.cpp  menu_btnsbmp_table.h  menu_configuration.cpp  menu_controls.cpp  menu_creategame.cpp  menu_credits.cpp  menu_customgame.cpp  menu_filedialog.cpp  menu_gameoptions.cpp  menu_gamepad.cpp  menu_internetgames.cpp  menu_langame.cpp  menu_loadgame.cpp  menu_main.cpp  menu_multiplayer.cpp  menu_newgame.cpp  menu_playersetup.cpp  menu_savegame.cpp  menu_saveload.cpp  menu_strings.cpp  menu_strings.h  menu_touch.cpp  menu_touchbuttons.cpp  menu_touchedit.cpp  menu_touchoptions.cpp  menu_video.cpp  menu_vidmodes.cpp  menu_vidoptions.cpp  (+6 more)
mainui/legacy/: menu_playdemo.cpp  menu_playrec.cpp  menu_recdemo.cpp
vgui_support/: Android.mk.mk  CMakeLists.txt  Makefile.dep  Makefile.linux  Makefile.wine  utlmemory.h  utlrbtree.h  utlvector.h  vgui_clip.cpp  vgui_font.cpp  vgui_input.cpp  vgui_int.cpp  vgui_main.h  vgui_support.sln  vgui_support.vcxproj  vgui_support.vcxproj.filters  vgui_surf.cpp
(+293 files in other folders)
